Removes temp text from Profiles/Welcome Screen

--- a/staRt/www/states/root/profiles/drawer-template/profiles-drawer.html
+++ b/staRt/www/states/root/profiles/drawer-template/profiles-drawer.html
@@ -53,7 +53,9 @@
 									<div class="name-text">{{profile.name}}</div>
 
 									<div class="r-item-iconBox">
-										<div ng-if="profile.formalTester" class="testerIcon"></div>
+										<!--  -->
+										<div ng-if="profile.formalTester"
+										class="r-ico32 r-ico-starfish"></div>
 									</div>
 
 								</div> <!-- r-item-nameRow -->
