--- a/staRt/www/states/root/profiles/profiles_template.html
+++ b/staRt/www/states/root/profiles/profiles_template.html
@@ -29,7 +29,7 @@
 				<div class="profiles-welcome welcome_shouldCreateProfile"
 				ng-if="data.profiles.length === 0">
 
-					<p>Please create a separate profile for each client who will be using the app.</p>
+					<p>Please create a separate profile for each particpant who will be using the app.</p>
 
 					<button class="button"
 					ng-click="createProfile()">
@@ -37,7 +37,7 @@
 						<i class="icon ion-person-add "></i>
 					</button>
 
-					<p>It is important to provide accurate information about the client (e.g. age, height, gender). This information is used by the app to make an educated guess about the best acoustic settings for the user.</p>
+					<p>It is important to provide accurate information about the particpant (e.g. age, height, gender). This information is used by the app to make an educated guess about the best acoustic settings for the particpant.</p>
 				</div>
 
 
@@ -48,13 +48,13 @@
 							Members of your flock are listed in the column on the left.
 						</p>
 
-						<p> Participants enrolled in our clinical research program have a <span class="testerIcon"></span> symbol by their name.</p>
+						<p style="margin-top: 2em;"> Participants enrolled in our clinical research program have a <span class="r-ico24 r-ico-starfish" style="top: 8px;"></span> symbol by their name.</p>
 					</div>
 
 					<div>
-						<p><span class="txtBold">To learn more about our research program,</span><br/>
+						<!-- <p><span class="txtBold">To learn more about our research program,</span><br/>
 							[link to website, open email msg w/ header, go to google form, etc ... #ask TM]
-						</p>
+						</p> -->
 					</div>
 				</div>
 				<!-- .msg-selectProfile -->
