--- a/staRt/www/states/root/profiles/profiles_template.html
+++ b/staRt/www/states/root/profiles/profiles_template.html
@@ -77,7 +77,9 @@
 						<div class="card-closeBox">
 							<button class="button"
 								ng-click="closeSlpView()">
-								<i class="r-close-icon ion-ios-close-outline"></i>
+								<div class="s-ico32 l-ico-cTextMain"
+								  ng-include=" './img/icons/line/close.svg' " >
+								</div>
 							</button>
 						</div>
 
