--- a/staRt/www/states/root/profiles/card-templates/settings/card-settings.html
+++ b/staRt/www/states/root/profiles/card-templates/settings/card-settings.html
@@ -8,8 +8,8 @@
 			</div>
 
 			<lpc-directive
-				sand="false"
-				slider="false">
+				slider="false"
+				beach="false">
 			</lpc-directive>
 
 		</div>
