--- a/staRt/www/states/root/tutorial/partialTemplates/default.html
+++ b/staRt/www/states/root/tutorial/partialTemplates/default.html
@@ -49,8 +49,8 @@
 							ng-if="currStep.LRow1.wave.lpcLive">
 								<lpc-directive
 									slider="false"
-									sand="false"
-									tutorial="true">
+									tutorial="true"
+									beach="false">
 								</lpc-directive>
 							</div> <!-- end #lpcCanvas -->
 						</div> <!-- end lpcBox -->
@@ -111,8 +111,8 @@
 							ng-if="currStep.LRow2.wave.lpcLive">
 								<lpc-directive
 									slider="false"
-									sand="false"
-									tutorial="true">
+									tutorial="true"
+									beach="false">
 								</lpc-directive>
 							</div> <!-- end #lpcCanvas -->
 
