--- a/staRt/www/common-components/practice-directive/practice-directive_template.html
+++ b/staRt/www/common-components/practice-directive/practice-directive_template.html
@@ -34,7 +34,8 @@
      tutorial="false"
      type="type"
      wave-hidden="forceWaveHidden || isFeedbacking"
-     hide-btn="true">
+     hide-btn="true"
+     beach="true">
     </lpc-directive>
 
    </div> <!-- end quest-lpcDir-layout -->
