--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -8,9 +8,7 @@
 
 		<!-- full-width & abs pos eles go here -->
 		<div class="quest-layout_bg-container">
-      <div ng-if="practicing && !data.waveHidden" class="img-bg img-bg_qtBF--BG"></div>
-      <div ng-if="practicing && !data.waveHidden" class="img-bg img-bg_qtBF--MG"></div>
-      <div ng-if="practicing && !data.waveHidden" class="img-bg img-bg_qtBF--FG"></div>
+			<div ng-if="practicing && !data.waveHidden" class="img-bg img-bg_BF"></div>
       <div ng-if="practicing && data.waveHidden" class="img-bg img-bg_qtNoBF"></div>
 		</div>
 
