See #326. Finishes lpc-directive controller update.

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -27,8 +27,7 @@
     <!-- Renderer will be inserted here -->
     <canvas
       id="lpc-canvas"
-      ng-hide="lpcHidden || probe || waveHidden || $root.rootWaveHidden"
-      ng-class="{ dev_lpcBorder: beach }">
+      ng-hide="lpcHidden || probe || waveHidden || $root.rootWaveHidden">
     </canvas>
   </div>
 
