--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -32,6 +32,7 @@
   </div>
 
 
+  <!--
   <div class="button-side-container ctlBtn-container">
     <button
       ng-click="stopPractice()"
@@ -56,6 +57,7 @@
       Hide Wave
     </button>
 
-  </div> <!-- end .button-side-container .ctlBtn-container -->
+  </div> -->
+  <!-- end .button-side-container .ctlBtn-container -->
 
 </div> <!-- end .lpc-contentBox -->
