--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -47,20 +47,20 @@
     <script src="common-components/lpc-directive/THREEjs-plugins/svgLoaderToMesh.js"></script>
     <script src="common-components/lpc-directive/lpc-directive_module.js"></script>
     <script src="common-components/lpc-directive/THREEjs-plugins/drawUtils.js"></script>
-
     <script src="common-components/lpc-directive/mesh/meshClass.js"></script>
     <script src="common-components/lpc-directive/mesh/foamGroup.js"></script>
     <script src="common-components/lpc-directive/mesh/bubBtn.js"></script>
     <script src="common-components/lpc-directive/mesh/postLeft.js"></script>
     <script src="common-components/lpc-directive/mesh/postRight.js"></script>
     <script src="common-components/lpc-directive/mesh/slider.js"></script>
-
     <script src="common-components/lpc-directive/lpc-renderer.js"></script>
     <script src="common-components/lpc-directive/lpc-directive_controller.js"></script>
 
-
     <script src="common-components/firebase-service/firebase-service_module.js"></script>
     <script src="common-components/auto-service/auto-service_module.js"></script>
+
+    <script src="common-components/toolbar-service/toolbar-service_module.js"></script>
+
     <script src="states/root/words/words_module.js"></script>
     <script src="states/root/words/words_controller.js"></script>
     <script src="states/root/tutorial/tutorial_module.js"></script>
