--- a/staRt/www/states/root/free-play/free-play_template.html
+++ b/staRt/www/states/root/free-play/free-play_template.html
@@ -16,6 +16,11 @@
 		<div class="free-layout_content-container">
 
 			<div class="free-lpcBox">
+
+				<div class="free_header-layout">
+					<div class="free_line"></div>
+				</div>
+
 				<lpc-directive
 					slider="true"
 					reset="true"
