typo fixes on Profiles welcome page

--- a/staRt/www/states/root/profiles/profiles_template.html
+++ b/staRt/www/states/root/profiles/profiles_template.html
@@ -48,7 +48,9 @@
 							Members of your flock are listed in the column on the left.
 						</p>
 
-						<p style="margin-top: 2em;"> Participants enrolled in our clinical research program have a <span class="r-ico24 r-ico-starfish" style="top: 8px;"></span> symbol by their name.</p>
+						<p style="margin-top: 2em;"> Participants enrolled in our clinical research program have a
+							<span class="s-ico24 p-ico-cTextMain" style="top: 8px;" ng-include=" './img/icons/path/starfish.svg' ">
+							</span> symbol by their name.</p>
 					</div>
 
 					<div>
