--- a/staRt/www/states/root/profiles/drawer-template/profiles-drawer.html
+++ b/staRt/www/states/root/profiles/drawer-template/profiles-drawer.html
@@ -16,12 +16,12 @@
 				<label class="searchBar-label">
 					<input class="nameSearch" ng-model="nameSearch" type="text" placeholder="">
 				</label>
-
+				<!--
 				<div class="s-ico24 l-ico-cWhite"
 				  ng-include=" './img/icons/line/search.svg' " >
 				</div>
 
-				<!-- <div class="s-ico24 l-ico-cWhite"
+				<div class="s-ico24 l-ico-cWhite"
 					ng-include=" './img/icons/line/close.svg' " >
 				</div> -->
 
