adds documentation for lpc-directive update

--- a/staRt/www/states/root/profiles/card-templates/settings/card-settings.html
+++ b/staRt/www/states/root/profiles/card-templates/settings/card-settings.html
@@ -9,7 +9,8 @@
 
 			<lpc-directive
 				slider="false"
-				beach="false">
+				beach="false"
+				tutorial="false">
 			</lpc-directive>
 
 		</div>
