--- a/staRt/www/states/root/free-play/free-play_template.html
+++ b/staRt/www/states/root/free-play/free-play_template.html
@@ -1,14 +1,14 @@
 <ion-view view-title="Free Play" class="state-contentBox">
 
 	<div class="free-layout_view-container">
-		<!-- <ion-nav-bar class="ion-nav-bar--old"></ion-nav-bar> -->
 		<ion-nav-bar class="ion-nav-bar">
 			<ion-nav-title>{{data.navTitle}}</ion-nav-title>
 		</ion-nav-bar>
 
 		<!-- full-width eles go here -->
 		<div class="free-layout_bg-container">
-			<div class="img-bg img-bg_BF"></div>
+			<div ng-if="!data.waveHidden" class="img-bg img-bg_BF"></div>
+			<div ng-if="data.waveHidden" class="img-bg img-bg_qtNoBF"></div>
 		</div>
 
 
@@ -21,15 +21,17 @@
 					<div class="free_line"></div>
 				</div>
 
-				<lpc-directive
-					slider="true"
-					reset="true"
-					tutorial="false"
-					active="lpcActive"
-					beach="true">
-				</lpc-directive>
-			</div>
+				<!-- NOTE: If(!data.waveHidden") in freePlay, the LPC component hides all of its elements. For stability, do NOT do an ng-if="!data.waveHidden" on the <lpc-directive> here.
+				-->
+					<lpc-directive
+						slider="true"
+						reset="true"
+						tutorial="false"
+						active="lpcActive"
+						beach="true"
+					</lpc-directive>
 
+			</div> <!-- end free-lpcBox-->
 		</div> <!-- end free-layout-->
 
 	</div> <!-- end free-contentBox-->
