--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -9,7 +9,7 @@
 		<!-- full-width & abs pos eles go here -->
 		<div class="quest-layout_bg-container">
 			<div ng-if="practicing && !data.waveHidden" class="img-bg img-bg_BF"></div>
-      <div ng-if="practicing && data.waveHidden" class="img-bg img-bg_qtNoBF"></div>
+			<div ng-if="practicing && data.waveHidden" class="img-bg img-bg_qtNoBF"></div>
 		</div>
 
 
@@ -130,12 +130,15 @@
           />
 				</div>
 
-				<div class="quest-config-row word-quest-wave-visible">
+
+				<div ng-if="!data.waveHidden"
+					class="quest-config-row word-quest-wave-visible">
 					<ion-item>
 						<ion-label>Wave Hidden</ion-label>
 						<ion-checkbox ng-model="data.waveHidden"></ion-checkbox>
 					</ion-item>
 				</div>
+
 
 				<div class="quest-config-row quest-button-class">
 					<button
