--- a/staRt/www/states/root/free-play/free-play_template.html
+++ b/staRt/www/states/root/free-play/free-play_template.html
@@ -18,6 +18,7 @@
 			<div class="free-lpcBox">
 
 				<div class="free_header-layout">
+					<div class="free_headText"></div>
 					<div class="free_line"></div>
 				</div>
 
@@ -32,6 +33,18 @@
 					</lpc-directive>
 
 			</div> <!-- end free-lpcBox-->
+
+			<div class="free-sandContainer">
+				<!--  ng-if="!data.researchSession" -->
+
+				<div class="free-sandText">
+					This is the place to practice &#47;r&#47; sounds on your own.<br>
+					There are no prompts or words to match -<br>
+					just try different things and see what works best.
+				</div>
+
+			</div> <!-- end .free-sandContainer-->
+
 		</div> <!-- end free-layout-->
 
 	</div> <!-- end free-contentBox-->
