--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -45,8 +45,13 @@
     <script src="common-components/start-server-service/start-server-service_module.js"></script>
     <script src="common-components/session-stats-service/session-stats-service_module.js"></script>
     <script src="common-components/profile-service/profile-service_module.js"></script>
+
+
     <script src="common-components/practice-directive/practice-directive_module.js"></script>
+    <script src="common-components/practice-directive/helpers/adaptDiff.js"></script>
     <script src="common-components/practice-directive/practice-directive_controller.js"></script>
+
+
     <script src="common-components/notifying-service/notifying-service_module.js"></script>
     <script src="common-components/lpc-directive/lpc-renderer.js"></script>
     <script src="common-components/lpc-directive/lpc-directive_controller.js"></script>
